--- a/.github/workflows/security-secrets-scan.yaml
+++ b/.github/workflows/security-secrets-scan.yaml
@@ -40,15 +40,6 @@ jobs:
           echo "Starting Gitleaks scan..."
           gitleaks detect --log-opts="--pretty --all" --verbose --redact=50 --report-path gitleaks-report.json | tee gitleaks-report.txt
 
-      - name: Upload Gitleaks report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: gitleaks-report
-          path: |
-                gitleaks-report.json
-                gitleaks-report.txt
-
       - name: Publish Gitleaks Output to Summary
         if: always()
         run: |
@@ -63,3 +54,37 @@ jobs:
             echo "</details>"
           } >> $GITHUB_STEP_SUMMARY
           fi
+
+      - name: Upload Gitleaks report as build artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: gitleaks-report
+          path: |
+                gitleaks-report.json
+                gitleaks-report.txt
+
+      - name: Configure GH Pages
+        if: always()
+        uses: actions/configure-pages@v3
+
+      - name: Upload Gitleaks report as GH Pages artifact
+        if: always()
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: |
+                gitleaks-report.json
+                gitleaks-report.txt
+
+  deploy:
+    name: Deploy secrets-scan results
+    runs-on: ubuntu-latest
+    needs: secrets-scan
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+    steps:
+      - name: Deploy Gitleaks results to GitHub Pages
+        uses: actions/deploy-pages@v4
