--- a/.github/workflows/security-secrets-scan.yaml
+++ b/.github/workflows/security-secrets-scan.yaml
@@ -64,18 +64,6 @@ jobs:
                 gitleaks-report.json
                 gitleaks-report.txt
 
-      - name: Configure GH Pages
-        if: always()
-        uses: actions/configure-pages@v3
-
-      - name: Upload Gitleaks report as GH Pages artifact
-        if: always()
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: |
-                gitleaks-report.json
-                gitleaks-report.txt
-
   deploy:
     name: Deploy secrets-scan results
     runs-on: ubuntu-latest
@@ -86,5 +74,22 @@ jobs:
     environment:
       name: github-pages
     steps:
+      - name: Download build artifact
+        if: always()
+        uses: actions/download-artifact@v4
+        with:
+          name: gitleaks-report
+          path: /tmp
+
+      - name: Configure GH Pages
+        if: always()
+        uses: actions/configure-pages@v3
+
+      - name: Upload Gitleaks report as GH Pages artifact
+        if: always()
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: /tmp
+      
       - name: Deploy Gitleaks results to GitHub Pages
         uses: actions/deploy-pages@v4
