Add GH pages config 4

--- a/.github/workflows/security-secrets-scan.yaml
+++ b/.github/workflows/security-secrets-scan.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: gitleaks-report
-          path: /tmp
+          path: .
 
       - name: Configure GH Pages
         if: always()
@@ -89,7 +89,7 @@ jobs:
         if: always()
         uses: actions/upload-pages-artifact@v3
         with:
-          path: /tmp
+          path: .
       
       - name: Deploy Gitleaks results to GitHub Pages
         uses: actions/deploy-pages@v4
